deploy/k8s/api-gateway/test-eu/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api-gateway
          image: api-gateway
          imagePullPolicy: Always
